package NYT.NFlow.NYsonSerializer.NProto;

message TTestMessage
{
    optional int32 Int32 = 1;
    optional string String = 2;
}
